# philgei_mcp_server_filesystem

./: pyproject.toml  requirements.txt
src/mcp_server_filesystem/: __init__.py  server.py
